<resources>
    <string name="app_name">Keep Moving</string>
    <string name="action_configuraciones">Configuración</string>
    <string name="action_cerrar">Cerra sesión</string>
    <string name="splash_retry">REINTENTAR</string>
    <string name="splash_salir">SALIR DE LA APLICACIÓN</string>
    <string name="splash_noInternet">Necesita una conexión a internet</string>
    <string name="crear_cuenta_principal">Crear una cuenta</string>
    <string name="email_login_principal">Email:</string>
    <string name="text_button_principal">Login</string>
    <string name="text_reset_password">¿Olvidaste tu contraseña?.</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="java_reset_password_snack">Por favor ingresa tu Email para el reset de password.</string>
    <string name="java_correo_inexistente_snack">El correo electronico no está registrado."</string>
    <string name="java_contraseña_incorrecta">La contraseña ingresada es incorrecta.</string>
    <string name="java_error_firebase_snack">No se pudo completar la acción.</string>
    <string name="java_alert_title">Restablecer Password</string>
    <string name="java_alert_mensaje">Se envió la contraseña al email</string>
    <string name="java_alert_positivebutton">Confirmar</string>
    <string name="java_progress_title">Iniciando sesión</string>
    <string name="java_progress_message">Por favor espere...</string>
    <string name="titulo_quien_eres">¿Quién eres?</string>
    <string name="soy_un_usuario">Soy una persona y quiero interactuar con la comunidad.</string>
    <string name="soy_una_academia">Soy una academia y quiero ofrecer mis servicios.</string>
    <string name="registrar_cuenta_usuario">Registrarme</string>
    <string name="hint_correo_principal">ejemplo@hotmail.com</string>
    <string name="hint_password_principal">Password</string>
    <string name="hint_nombre_completo">Nombre completo</string>
    <string name="hint_nombre_usuario">Nombre de usuario</string>
    <string name="hint_confirm_password">Comfirmar password</string>
    <string name="hint_nombre_academia">Nombre de la academia</string>
    <string name="hint_telefono_academia">Telefono</string>
    <string name="hint_direccion_academia">Dirección</string>
    <string name="hint_descripcion_academia">Descripción</string>
    <string name="hint_encargado_academia">Nombre del encargado</string>
    <string name="hint_contra_actual">Contraseña actual</string>
    <string name="hint_contra_nueva">Contraseña nueva</string>
    <string name="hint_contra_nueva_conf">Comfirmar contraseña nueva</string>
    <string name="hint_nombre_evento">Nombre del evento</string>
    <string name="hint_hora_inicio">Hora de inicio del evento.</string>
    <string name="hint_hora_fin">Hora de fin del evento.</string>
    <string name="acercate">acércate, mira y\naprende</string>
    <string name="deliza">desliza para iniciar</string>
    <string name="crear_cuenta_personal">Crear una cuenta Personal</string>
    <string name="action_aceptar">Aceptar</string>
    <string name="labes_fecha_nac">Fecha de Nacimiento:</string>
    <string name="java_nombre_rechazado_snack">El nombre solo puede tener letras
        con acentos y con una longitud de entre 4 y 100.</string>
    <string name="java_nombre_usuario_rechazado_snack">El usuario solo puede tener letras y numeros</string>
    <string name="java_email_rechazado_snack">El correo no tiene el formato correcto.</string>
    <string name="java_contra_rechazada_snack">La contraseña debe tener mínimo 4 y máximo 16
        caracteres del 0-9 y de la a-z ó A-Z</string>
    <string name="java_contra_diferente_snack">Las contraseñas no coinciden</string>
    <string name="java_img_no_existe">No ha seleccionado una imagen de perfil.</string>
    <string name="java_bien_snack">Usuario registrado con exito</string>
    <string name="java_mal_snack">Ha ocurridó un error</string>
    <string name="java_error_nombre">El nombre ingresado no es valido</string>
    <string name="java_error_email">El correo ingresado no es valido</string>
    <string name="java_error_contra">La contraseña no es válida.</string>
    <string name="java_no_eligio_imagen">No ha seleccionado una imagen.</string>
    <string name="java_error_imagen">Algo salió mal</string>
    <string name="java_error_tamanio_imagen">El peso de la imagen es demasiado largo.</string>
    <string name="crear_cuenta_academia">Crear una cuenta de academia</string>
    <string name="java_error_nombreacademia">Nombre de academia no valido.</string>
    <string name="java_error_telefonoacademia">El telefono introducido no es valido.</string>
    <string name="java_error_direccionacademia">La dirección introducida no es valida</string>
    <string name="java_error_encargadoacademia">El nombre del encargado introducido no es valido</string>
    <string name="java_error_descripcionacademia">La descripción introducida no es valida</string>
    <string name="java_nomacademia_novalido_snack">El nombre de la academia solo puede
        tener letras y numeros.</string>
    <string name="java_telefono_snack">El telefono solo puede tener de 8 a 14 numeros.</string>
    <string name="java_direccion_snack">El formato de la dirección no es el correcto.</string>
    <string name="java_descripcion_snack">La descripción no acepta caracteres especiales con
        excepcion de signos de puntiación.</string>
    <string name="java_faltantes_snack">Aun faltan introducir datos.</string>
    <string name="java_error_falta">Falta llenar este campo.</string>
    <string name="error_unknown">Ha ocurrido un error durante el proceso.</string>
    <string name="error_disconnected">Ha ocurrido un error al tratar de conectarse
        al servidor.</string>
    <string name="error_network">Ha ocurrido un error al tratar de conectarse
        a internet.</string>
    <string name="error_user">El usuario ya existe. Intente con otro.</string>
    <string name="error_correo_usado">El correo ya está registrado.</string>
    <string name="java_progress_titleCrear">Creando su perfil.</string>
    <string name="acerca">Acerca del producto</string>
    <string name="version_acerca">Version: 1.0.1 (Version Estable)</string>
    <string name="anio">Año: 2016</string>
    <string name="info_acerca1">Keep Moving es una aplicación desarrollada por estudiantes del
        Instituto Politecnico Nacional en la UPIICSA.</string>
    <string name="info_acerca2">Queda estrictamente prohibido lucrar, distribuir y/o modificar
        el producto sin autorización previa.</string>
    <string name="info_acerca3">Para más información, envié sus comentarios y le
        responderemos a la brevedad.</string>
    <string name="info_ana">Ana :3</string>
    <string name="angi">Angela Hernandez</string>
    <string name="emmanuel">Emmanuel Castañeda</string>
    <string name="chucho1">Jesús Guz </string>
    <string name="chucho2">má</string>
    <string name="chucho3">n</string>
    <string name="mensajeChucho">M Y J\nTe amo mari azulina amor.</string>
    <string name="sergio1">Sergio C</string>
    <string name="sergio2">an</string>
    <string name="sergio3">seco</string>
    <string name="configuracion">Configuración</string>
    <string name="conf_general">General</string>
    <string name="conf_inf">Información de perfil</string>
    <string name="conf_cambia">Actualiza tu información personal.</string>
    <string name="conf_cambia_academia">Actualiza la información de tu academia.</string>
    <string name="conf_seguridad">Seguridad</string>
    <string name="conf_contra">Contraseña</string>
    <string name="conf_clave">Cambia o actualiza tu clave de acceso.</string>
    <string name="conf_clave_academia">Cambia o actualiza tu clave de acceso.</string>
    <string name="conf_extras">Extras</string>
    <string name="conf_acerca">Acerca de nosotros</string>
    <string name="conf_conoce">Conoce quien esta detras de Keep Moving.</string>
    <string name="conf_in_usuario">No se puedieron cargar los datos.</string>
    <string name="agregar_evento">Agregar evento</string>
    <string name="agregar_evento_fecha">Fecha del evento</string>
    <string name="agregar_evento_hora_inicio">Hora de inicio</string>
    <string name="agregar_evento_hora_fin">Hora de fin</string>
    <string name="java_error_editText_direccion">Por favor, obtenga la dirección por medio del boton
        a la izquierda.</string>
    <string name="java_error_editText_fecha">Por favor, obtenga la fecha del evento por medio del boton
        a la izquierda.</string>
    <string name="java_error_editText_hInicio">Por favor, obtenga la hora de inicio por medio del boton
        a la izquierda.</string>
    <string name="java_error_editText_hFin">Por favor, obtenga la hora de fin por medio del boton
        a la izquierda.</string>
    <string name="java_error_horas">La hora de inicio no puede ser mayor a la hora de fin del evento.</string>
    <string name="tabUser_cerrar_title">Cerrar sesión.</string>
    <string name="tabUser_cerrar_message">¿Desea cerrar su sesión actual?</string>
    <string name="map_ubicacion_actual">Ubicación actual</string>
    <string name="aceptar">Aceptar</string>
    <string name="java_contra_cambiada_snack">La contraseña ha sido cambiada con exito</string>
    <string name="java_datos_bien_snack">Los datos se han actualizado.</string>
    <string name="java_aviso">Información</string>
    <string name="java_datos_confirma_salir_act">Esta seguro de regresar, los datos ingresados no se guardarán
                                                        si aún no actualiza.</string>
    <string name="academias">Academias</string>
    <string name="agenda">Agenda</string>
    <string name="agenda_mes1">Enero</string>
    <string name="agenda_mes2">Febrero</string>
    <string name="agenda_mes3">Marzo</string>
    <string name="agenda_mes4">Abril</string>
    <string name="agenda_mes5">Mayo</string>
    <string name="agenda_mes6">Junio</string>
    <string name="agenda_mes7">Julio</string>
    <string name="agenda_mes8">Agosto</string>
    <string name="agenda_mes9">Septiembre</string>
    <string name="agenda_mes10">Octubre</string>
    <string name="agenda_mes11">Noviembre</string>
    <string name="agenda_mes12">Diciembre</string>
    <string name="agenda_mes_novalido">Valor de mes no valido</string>
    <string name="tips">Tips</string>
    <string name="nombre_transicion_imagen">Tip</string>
    <string name="eventos">Eventos</string>
    <string name="title_activity_pantalla_evento">PantallaEvento</string>
    <string name="evento_favoritos">Favoritos</string>
    <string name="perfil_academia">Perfil de academia</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_activity_x">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>