<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:id="@+id/pantalla_acercaDe_cooordinator"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay"
                app:elevation="0dp">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
            </android.support.design.widget.AppBarLayout>


            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".ClasesViews.PantallaAcercaDe"
                android:orientation="vertical"
                android:id="@+id/layout_acerca_de">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:id="@+id/logoPrincipal"
                        android:src="@drawable/keep_logo"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/padding_elements"
                        android:text="@string/acerca"
                        android:textColor="@color/colorTextAcerca"
                        android:textSize="@dimen/normal_text"
                        android:id="@+id/textView1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padding_elements"
                        android:paddingLeft="@dimen/padding_elements"
                        android:text="@string/app_name"
                        android:textColor="@color/colorTextAcerca"
                        android:textSize="@dimen/normal_text"
                        android:id="@+id/textView2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padding_elements"
                        android:paddingLeft="@dimen/padding_elements"
                        android:text="@string/version_acerca"
                        android:textColor="@color/colorTextAcerca"
                        android:textSize="@dimen/normal_text"
                        android:id="@+id/textView3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padding_elements"
                        android:paddingLeft="@dimen/padding_elements"
                        android:text="@string/anio"
                        android:textColor="@color/colorTextAcerca"
                        android:textSize="@dimen/normal_text"
                        android:id="@+id/textView4" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding_elements"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padding_elements"
                        android:paddingLeft="@dimen/padding_elements"
                        android:text="@string/info_acerca1"
                        android:textColor="@color/colorTextAcerca"
                        android:textSize="@dimen/normal_text"
                        android:id="@+id/textView5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padding_elements"
                        android:paddingLeft="@dimen/padding_elements_big"
                        android:text="@string/angi"
                        android:textColor="@color/colorTextAcerca"
                        android:textSize="@dimen/normal_text"
                        android:id="@+id/textView6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padding_elements"
                        android:paddingLeft="@dimen/padding_elements_big"
                        android:text="@string/emmanuel"
                        android:textColor="@color/colorTextAcerca"
                        android:textSize="@dimen/normal_text"
                        android:id="@+id/textView7" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/padding_elements"
                            android:paddingLeft="@dimen/padding_elements_big"
                            android:text="@string/chucho1"
                            android:textColor="@color/colorTextAcerca"
                            android:textSize="@dimen/normal_text"
                            android:id="@+id/textView8" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/padding_elements"
                            android:text="@string/chucho2"
                            android:textColor="@color/colorTextAcerca"
                            android:textSize="@dimen/normal_text"
                            android:id="@+id/textViewClicJ" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/padding_elements"
                            android:text="@string/chucho3"
                            android:textColor="@color/colorTextAcerca"
                            android:textSize="@dimen/normal_text"
                            android:id="@+id/textView82" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/padding_elements"
                            android:paddingLeft="@dimen/padding_elements_big"
                            android:text="@string/sergio1"
                            android:textColor="@color/colorTextAcerca"
                            android:textSize="@dimen/normal_text"
                            android:id="@+id/textView9" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/padding_elements"
                            android:text="@string/sergio2"
                            android:textColor="@color/colorTextAcerca"
                            android:textSize="@dimen/normal_text"
                            android:id="@+id/textViewClic" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/padding_elements"
                            android:text="@string/sergio3"
                            android:textColor="@color/colorTextAcerca"
                            android:textSize="@dimen/normal_text"
                            android:id="@+id/textView92" />

                    </LinearLayout>



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padding_elements"
                        android:paddingLeft="@dimen/padding_elements"
                        android:text="@string/info_acerca2"
                        android:textColor="@color/colorTextAcerca"
                        android:textSize="@dimen/normal_text"
                        android:id="@+id/textView10" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padding_elements"
                        android:paddingLeft="@dimen/padding_elements"
                        android:text="@string/info_acerca3"
                        android:textColor="@color/colorTextAcerca"
                        android:textSize="@dimen/normal_text"
                        android:id="@+id/textView11" />


                </LinearLayout>

            </LinearLayout>

         </LinearLayout>

     </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:src="@mipmap/ic_mail_white_24dp"
        app:layout_anchor="@id/layout_acerca_de"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>
