<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:id="@+id/inicial_coordinator">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".ClasesViews.PantallaInicial"
            android:contextClickable="false"
            android:clickable="true"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right">

                <Button
                    android:id="@+id/inicial_btn_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crear_cuenta_principal"
                    android:textColor="@color/colorPrincipalText"
                    android:textSize="@dimen/small_text"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:id="@+id/logoPrincipal"
                    android:src="@drawable/keep_logo"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingBottom="@dimen/padding_elements"
                    android:text="@string/acercate"
                    android:textColor="@color/colorPrincipalText"
                    android:textSize="@dimen/extra_big_text"
                    android:id="@+id/textView" />

             </LinearLayout>


         </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/deliza"
            android:textColor="@color/colorPrincipalText"
            android:textSize="@dimen/big_text"
            android:id="@+id/textView1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:id="@+id/imageView1"
            android:src="@mipmap/ic_expand_less_white_48dp"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>